<resources>
    <string name="app_name">App Tcm</string>
    <string name="TxtCategorias">Categorias</string>
    <string name="TxtServ">Projeto</string>
    <string name="txtSistema">Sistemas</string>
    <string name="txtAplicativo">Aplicativo</string>
    <string name="TxtProcurar">Buscar...</string>
    <string name="TxtConta">Conta</string>

    <!--Conta func-->
    <string name="Txtupdatedados">Atualizar Dados</string>
    <string name="TxtInfoConta">Informaçoes da conta</string>
    <string name="TxtSuporte">Suporte</string>
    <string name="TxtInfoLegais">Informações Legais</string>
    <string name="TxtTermosCond">Termos de Uso</string>
    <string name="txtAddFunc">Adicionar Funcionario</string>
    <string name="TxtLogout">Sair</string>

    <string name="TxtAddFunc">Adiconar Funcionario</string>
    <string name="TxtEmailFunc">Email</string>
    <string name="TxtNomeFunc">Nome</string>
    <string name="txtSenhaFunc">Senha</string>
    <string name="TxtCargoFunc">Cargo</string>
    <string name="TxtEndereco">Endereço</string>
    <string name="TxtTel">telefone</string>


    <!--    Tela add Serv-->
    <string name="TxtAddServ">Adiconar Projeto</string>
    <string name="TxtNomeEmpresa">Nome da empresa</string>
    <string name="TxtTitulo">Titulo</string>
    <string name="TxtPrazo">Prazo</string>
    <string name="TxtDescServ">Descrição</string>
    <string name="TxtplatServ">Plataforma do Projeto</string>
    <string name="TxtSalvar">Salvar</string>

    <!--    Tela Update func-->
    <string name="TxtAtualizaFunc">Atualizar Funcionario</string>

    <!--    Tela detalhes serv-->
    <string name="txtsalvar">salvar</string>
    <string name="txtUpdateServ">Atualizar</string>
    <string name="txtDeleteServ">Excluir</string>
    <string name="TxtDescEvento">Descrição</string>
    <string name="txtNivelConclusoa">Nivel de Conclusão</string>
    <string name="txtVazio">Puts não achamos nada...</string>

    <!--Filtro -->
    <string name="txtBuscar">Buscar</string>
    <string name="txtTecs">Linguagens</string>
    <string name="txtplvChave">Palavra Chave</string>
    <string name="txtHtml">Html</string>
    <string name="txtPHP">PHP</string>
    <string name="txtAsp">Asp.net</string>
    <string name="txtAndroid">Android</string>
    <string name="txtServidor">Servidor</string>
    <string name="txtJava">Java</string>


    <!-- desc img-->
    <string name="descImgSeta">sair para home</string>
    <string name="descImgRelogio">Img De relogio</string>

    <string-array name="ItensDropdown">
        <item> </item>
        <item>Em Andamento</item>
        <item>Terminado</item>
        <item>Não iniciado</item>
        <item>Prazo Proximo</item>
        <item>Atrasado</item>
    </string-array>

    <string-array name="CargosFunc">
        <item>Funcionario</item>
        <item>Lider</item>
    </string-array>

    <string-array name="TecUsadas">
        <item> </item>
        <item>Html Css</item>
        <item>PHP</item>
        <item>Asp.net</item>
        <item>Android/Ios</item>
        <item>Servidor</item>
        <item>Java</item>
    </string-array>
</resources>