<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContaFunc">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@color/white">

                <TextView
                    android:id="@+id/txtViewNameFunc"
                    style="@style/TxtPadraoConta"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtViewEmailFunc"
                    style="@style/TxtPadraoConta"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="55dp"
                    android:textSize="14sp" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/txtView33"
                style="@style/TxtPadraoConta"
                android:layout_margin="15dp"
                android:text="@string/TxtConta"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/info_conta"
                style="@style/BtnPadraoConta"
                android:layout_marginTop="5dp"
                android:text="@string/TxtInfoConta"/>

            <Button
                android:id="@+id/updateConta"
                style="@style/BtnPadraoConta"
                android:layout_marginTop="5dp"
                android:text="@string/Txtupdatedados"/>


            <Button
                android:id="@+id/button6"
                style="@style/BtnPadraoConta"
                android:text="@string/TxtSuporte"/>

            <TextView
                android:id="@+id/txtView37"
                style="@style/TxtPadraoConta"
                android:layout_margin="15dp"
                android:text="@string/TxtInfoLegais"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/button8"
                style="@style/BtnPadraoConta"
                android:text="@string/TxtTermosCond"/>
            <Button
                android:id="@+id/novoFunc"
                style="@style/BtnPadraoConta"
                android:text="@string/txtAddFunc"/>


            <Button
                android:id="@+id/btnLogout"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="45dp"
                android:background="@drawable/borda_aredondada"
                app:backgroundTint="@color/AzulClaro"
                android:padding="10dp"
                android:text="@string/TxtLogout"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>

    <View
        android:id="@+id/myRectangleView5"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/design_default_color_primary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/descImgSeta"/>


    <ImageButton
        android:id="@+id/imgBtnVoltaHome4"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:background="@color/AzulClaro"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/fecha" />

    <TextView
        android:id="@+id/txtView29"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TxtConta"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>