<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".AddServ">
    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <View
        android:id="@+id/viewHeader"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="@color/Azul"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btnFechaAdd"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fecha" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TxtAddServ"
        android:textAlignment="center"
        android:layout_marginTop="70dp"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editNomeEmpresa"
        style="@style/editText"
        android:inputType="textPersonName"
        android:background="@drawable/border_input"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTitulo"
        style="@style/editText"
        android:inputType="textPersonName"
        android:background="@drawable/border_input"
        app:layout_constraintTop_toBottomOf="@+id/editNomeEmpresa"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextDate"
        style="@style/editText"
        android:inputType="date"
        android:background="@drawable/border_input"
        app:layout_constraintTop_toBottomOf="@+id/editTitulo"
        tools:ignore="MissingConstraints" />

            <ImageView
                android:id="@+id/imgCalender"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:padding="15dp"
                android:layout_marginEnd="-15dp"
                app:layout_constraintBottom_toBottomOf="@+id/editTextDate"
                app:layout_constraintEnd_toEndOf="@+id/editTextDate"
                app:layout_constraintTop_toTopOf="@+id/editTextDate"
                app:srcCompat="@drawable/calendario" />

            <EditText
        android:id="@+id/editDescserv"
        style="@style/editText"
        android:inputType="textMultiLine"
        android:background="@drawable/border_input"
        app:layout_constraintTop_toBottomOf="@+id/editTextDate"
        tools:ignore="MissingConstraints" />

            <Spinner
                android:id="@+id/dropdownTecUsada"
                style="@style/editText"
                android:layout_height="40dp"
                android:padding="2dp"
                android:layout_marginTop="44dp"
                android:spinnerMode="dropdown"
                android:background="@drawable/border_input"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editDescserv" />

            <Button
                android:id="@+id/btnSalvar"
                android:layout_width="260dp"
                android:layout_height="64dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/borda_aredondada"
                android:backgroundTint="@color/Azul"
                android:text="@string/TxtSalvar"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dropdownTecUsada" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:text="@string/TxtPrazo"
        app:layout_constraintBottom_toTopOf="@+id/editTextDate"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:text="@string/TxtTitulo"
        app:layout_constraintBottom_toTopOf="@+id/editTitulo"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:text="@string/TxtNomeEmpresa"
        app:layout_constraintBottom_toTopOf="@+id/editNomeEmpresa"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:text="@string/TxtDescServ"
        app:layout_constraintBottom_toTopOf="@+id/editDescserv"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:text="@string/TxtplatServ"
        app:layout_constraintBottom_toTopOf="@+id/dropdownTecUsada"
        app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>