<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".AddFunc">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <View
        android:id="@+id/viewHeader"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="@color/Azul"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btnFechaAdd"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fecha" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/TxtAddFunc"
        android:textAlignment="center"
        android:layout_marginTop="70dp"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:text="@string/TxtEmailFunc"
        app:layout_constraintBottom_toTopOf="@+id/editEmailFunc"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editEmailFunc"
        style="@style/editText"
        android:inputType="textEmailAddress"
        android:background="@drawable/border_input"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="50dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:text="@string/TxtNomeFunc"
        app:layout_constraintBottom_toTopOf="@+id/editNomeFunc"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editNomeFunc"
        style="@style/editText"
        android:inputType="textPersonName"
        android:background="@drawable/border_input"
        app:layout_constraintTop_toBottomOf="@+id/editEmailFunc"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:text="@string/txtSenhaFunc"
        app:layout_constraintBottom_toTopOf="@+id/editSenhaFunc"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editSenhaFunc"
        style="@style/editText"
        android:inputType="textPassword"
        android:background="@drawable/border_input"
        app:layout_constraintTop_toBottomOf="@+id/editNomeFunc"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="50dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:text="@string/TxtCargoFunc"
        app:layout_constraintBottom_toTopOf="@+id/dropdownCargo"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/dropdownCargo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="40dp"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editSenhaFunc" />


    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:text="@string/TxtTel"
        app:layout_constraintBottom_toTopOf="@+id/editTelFunc"
        app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/editTelFunc"
                style="@style/editText"
                android:layout_marginTop="48dp"
                android:background="@drawable/border_input"
                android:enabled="true"
                android:inputType="text"
                app:layout_constraintTop_toBottomOf="@+id/dropdownCargo"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="50dp" />


            <ImageButton
                android:id="@+id/imgBtnListaContatos"
                android:layout_width="wrap_content"
                android:layout_height="31dp"
                android:layout_marginEnd="100dp"
                android:backgroundTint="@color/white"
                android:scaleType="center"
                app:layout_constraintBottom_toBottomOf="@+id/editTelFunc"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/editTelFunc"
                app:srcCompat="@drawable/contato" />

    <Button
        android:id="@+id/btnSalvarFunc"
        android:layout_width="260dp"
        android:layout_height="64dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/borda_aredondada"
        app:backgroundTint="@color/Azul"
        android:textColor="@color/white"
        android:text="@string/TxtSalvar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTelFunc" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>